--- a/training.ipynb
+++ b/training.ipynb
@@ -9,15 +9,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [00:05<00:00, 1733.97it/s]\n"
+      "100%|██████████| 10000/10000 [00:10<00:00, 914.01it/s]\n"
      ]
     }
    ],
    "source": [
     "# Crear una instancia del ambiente\n",
-    "from template import AgenteQLearning, AmbienteDiezMil\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "\n",
+    "from agente import AgenteQLearning\n",
+    "from ambiente import AmbienteDiezMil\n",
+    "\n",
     "seed = 42\n",
     "np.random.seed(seed)\n",
     "\n",
@@ -28,7 +31,7 @@
     "episodios = 10000\n",
     "\n",
     "# Entrenar al agente con un número de episodios\n",
-    "vals = list(agente.entrenar(episodios, verbose=True))\n",
+    "agente.entrenar(episodios, verbose=True)\n",
     "# agente.guardar_politica(f\"politica_{episodios}.csv\")"
    ]
   },
@@ -38,23 +41,31 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Validación DeepPurple: 25.393\n",
-      "Validación Random: 27.034\n",
-      "Validación Plantón: 25.143\n"
+     "ename": "IndexError",
+     "evalue": "index 600 is out of bounds for axis 0 with size 12",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m val \u001b[38;5;241m=\u001b[39m Validador(ambiente)\n\u001b[1;32m      6\u001b[0m val_count \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10000\u001b[39m\n\u001b[0;32m----> 7\u001b[0m avg \u001b[38;5;241m=\u001b[39m \u001b[43mval\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidar_politica\u001b[49m\u001b[43m(\u001b[49m\u001b[43magente\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mq_table2pol\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mval_count\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mValidación DeepPurple: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mavg\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m val_rand \u001b[38;5;241m=\u001b[39m Validador(ambiente)\n",
+      "File \u001b[0;32m~/Desktop/code/TP1_IAN/template.py:50\u001b[0m, in \u001b[0;36mValidador.validar_politica\u001b[0;34m(self, politica, episodios)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Dada una política entrenada, se valida su desempeño en el ambiente.\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \n\u001b[1;32m     42\u001b[0m \u001b[38;5;124;03mArgs:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;124;03m    float: Turnos promedio necesarios para llegar a 10.000.\u001b[39;00m\n\u001b[1;32m     48\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     49\u001b[0m jugador \u001b[38;5;241m=\u001b[39m JugadorFromPolicy(politica)\n\u001b[0;32m---> 50\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidar_jugador\u001b[49m\u001b[43m(\u001b[49m\u001b[43mjugador\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepisodios\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Desktop/code/TP1_IAN/template.py:34\u001b[0m, in \u001b[0;36mValidador.validar_jugador\u001b[0;34m(self, jugador, episodios)\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(episodios):\n\u001b[1;32m     33\u001b[0m     juego \u001b[38;5;241m=\u001b[39m JuegoDiezMil(jugador)\n\u001b[0;32m---> 34\u001b[0m     cantidad_turnos, _ \u001b[38;5;241m=\u001b[39m \u001b[43mjuego\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjugar\u001b[49m\u001b[43m(\u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[1;32m     35\u001b[0m     turnos\u001b[38;5;241m.\u001b[39mappend(cantidad_turnos)\n\u001b[1;32m     37\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m np\u001b[38;5;241m.\u001b[39mmean(turnos)\n",
+      "File \u001b[0;32m~/Desktop/code/TP1_IAN/diezmil.py:41\u001b[0m, in \u001b[0;36mJuegoDiezMil.jugar\u001b[0;34m(self, verbose, tope_turnos)\u001b[0m\n\u001b[1;32m     37\u001b[0m     puntaje_turno \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     39\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     40\u001b[0m     \u001b[38;5;66;03m# Bien, suma puntos. Preguntamos al jugador qué quiere hacer.\u001b[39;00m\n\u001b[0;32m---> 41\u001b[0m     jugada, dados_a_tirar \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjugador\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjugar\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     42\u001b[0m \u001b[43m        \u001b[49m\u001b[43mpuntaje_total\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpuntaje_turno\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdados\u001b[49m\n\u001b[1;32m     43\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     45\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m jugada \u001b[38;5;241m==\u001b[39m JUGADA_PLANTARSE:\n\u001b[1;32m     46\u001b[0m         msg \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mP\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "File \u001b[0;32m~/Desktop/code/TP1_IAN/jugador.py:131\u001b[0m, in \u001b[0;36mJugadorFromPolicy.jugar\u001b[0;34m(self, puntaje_total, puntaje_turno, dados, verbose)\u001b[0m\n\u001b[1;32m    127\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m puntaje \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    128\u001b[0m     pts \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m    130\u001b[0m jugada \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mposibles_acciones[\n\u001b[0;32m--> 131\u001b[0m     \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpolitica\u001b[49m\u001b[43m[\u001b[49m\u001b[43mpts\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mno_usados\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[1;32m    132\u001b[0m ]\n\u001b[1;32m    134\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m jugada \u001b[38;5;241m==\u001b[39m JUGADA_PLANTARSE:\n\u001b[1;32m    135\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m (JUGADA_PLANTARSE, [])\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 600 is out of bounds for axis 0 with size 12"
      ]
     }
    ],
    "source": [
-    "from jugador import JugadorAleatorio, JugadorSiempreSePlanta\n",
+    "from jugador import JugadorAleatorio, JugadorFromPolicyV2, JugadorSiempreSePlanta\n",
     "from template import Validador\n",
     "np.random.seed(seed)\n",
     "\n",
     "val = Validador(ambiente)\n",
-    "val_count = 1000\n",
-    "avg = val.validar_politica(agente.q_table2pol(), val_count)\n",
+    "val_count = 10000\n",
+    "# avg = val.validar_politica(agente.q_table2pol(), val_count)\n",
+    "jugador = JugadorFromPolicyV2(\"DeepPurple\", agente.q_table2pol())\n",
+    "avg = val.validar_jugador(jugador, val_count)\n",
     "print(f\"Validación DeepPurple: {avg}\")\n",
     "\n",
     "val_rand = Validador(ambiente)\n",
