--- a/exploratory.ipynb
+++ b/exploratory.ipynb
@@ -11,141 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "turno 1: 163234 P --> 100 puntos. TOTAL: 100\n",
-      "turno 2: 242256 T(46)  42  --> 0 puntos. TOTAL: 100\n",
-      "turno 3: 552224 T(4)  4  --> 0 puntos. TOTAL: 100\n",
-      "turno 4: 144113 T(344)  454 T(44)  56 T(6)  1 T(123456)  522613 P --> 1350 puntos. TOTAL: 1450\n",
-      "turno 5: 213363 T(26)  61 T(6)  5 P --> 550 puntos. TOTAL: 2000\n",
-      "turno 6: 544551 T(44)  46  --> 0 puntos. TOTAL: 2000\n",
-      "turno 7: 522451 T(224)  334  --> 0 puntos. TOTAL: 2000\n",
-      "turno 8: 311353 P --> 550 puntos. TOTAL: 2550\n",
-      "turno 9: 461246 P --> 100 puntos. TOTAL: 2650\n",
-      "turno 10: 155532 T(23)  53 T(3)  6  --> 0 puntos. TOTAL: 2650\n",
-      "turno 11: 134266 T(23466)  42234  --> 0 puntos. TOTAL: 2650\n",
-      "turno 12: 223632 T(336)  324  --> 0 puntos. TOTAL: 2650\n",
-      "turno 13: 413224 T(22344)  63516 T(366)  463  --> 0 puntos. TOTAL: 2650\n",
-      "turno 14: 432645 T(23446)  32266  --> 0 puntos. TOTAL: 2650\n",
-      "turno 15: 563263 T(23366)  62664 T(24)  25 T(2)  2  --> 0 puntos. TOTAL: 2650\n",
-      "turno 16: 155214 P --> 300 puntos. TOTAL: 2950\n",
-      "turno 17: 331222 T(33)  25 T(2)  1 P --> 450 puntos. TOTAL: 3400\n",
-      "turno 18: 434512 P --> 150 puntos. TOTAL: 3550\n",
-      "turno 19: 324456 T(23446)  56535 T(36)  45 T(4)  6  --> 0 puntos. TOTAL: 3550\n",
-      "turno 20: 244213 T(22344)  15625 P --> 300 puntos. TOTAL: 3850\n",
-      "turno 21: 521112 P --> 1050 puntos. TOTAL: 4900\n",
-      "turno 22: 521616 P --> 250 puntos. TOTAL: 5150\n",
-      "turno 23: 523132 P --> 150 puntos. TOTAL: 5300\n",
-      "turno 24: 161166 P --> 1600 puntos. TOTAL: 6900\n",
-      "turno 25: 323245 P --> 50 puntos. TOTAL: 6950\n",
-      "turno 26: 536446 T(34466)  36311 P --> 250 puntos. TOTAL: 7200\n",
-      "turno 27: 466231 P --> 100 puntos. TOTAL: 7300\n",
-      "turno 28: 452615 T(246)  632  --> 0 puntos. TOTAL: 7300\n",
-      "turno 29: 532234 T(22334)  25636 P --> 100 puntos. TOTAL: 7400\n",
-      "turno 30: 152622 P --> 350 puntos. TOTAL: 7750\n",
-      "turno 31: 112621 P --> 1000 puntos. TOTAL: 8750\n",
-      "turno 32: 562556 P --> 500 puntos. TOTAL: 9250\n",
-      "turno 33: 113266 T(2366)  1211 P --> 1200 puntos. TOTAL: 10450\n",
-      "random 33 10450\n",
-      "turno 1: 164315 P --> 250 puntos. TOTAL: 250\n",
-      "turno 2: 612563 P --> 150 puntos. TOTAL: 400\n",
-      "turno 3: 662244 P --> 1500 puntos. TOTAL: 1900\n",
-      "turno 4: 444414 P --> 500 puntos. TOTAL: 2400\n",
-      "turno 5: 456464 P --> 450 puntos. TOTAL: 2850\n",
-      "turno 6: 232531 P --> 150 puntos. TOTAL: 3000\n",
-      "turno 7: 334165 P --> 150 puntos. TOTAL: 3150\n",
-      "turno 8: 162455 P --> 200 puntos. TOTAL: 3350\n",
-      "turno 9: 463232  --> 0 puntos. TOTAL: 3350\n",
-      "turno 10: 224122 P --> 300 puntos. TOTAL: 3650\n",
-      "turno 11: 351225 P --> 200 puntos. TOTAL: 3850\n",
-      "turno 12: 615125 P --> 300 puntos. TOTAL: 4150\n",
-      "turno 13: 643532 P --> 50 puntos. TOTAL: 4200\n",
-      "turno 14: 541255 P --> 600 puntos. TOTAL: 4800\n",
-      "turno 15: 411254 P --> 250 puntos. TOTAL: 5050\n",
-      "turno 16: 516651 P --> 1500 puntos. TOTAL: 6550\n",
-      "turno 17: 264534 P --> 50 puntos. TOTAL: 6600\n",
-      "turno 18: 532634 P --> 50 puntos. TOTAL: 6650\n",
-      "turno 19: 311165 P --> 1050 puntos. TOTAL: 7700\n",
-      "turno 20: 542124 P --> 150 puntos. TOTAL: 7850\n",
-      "turno 21: 145164 P --> 250 puntos. TOTAL: 8100\n",
-      "turno 22: 142154 P --> 250 puntos. TOTAL: 8350\n",
-      "turno 23: 231645 P --> 3000 puntos. TOTAL: 11350\n",
-      "plantón 23 11350\n",
-      "turno 1: 622423 P --> 200 puntos. TOTAL: 200\n",
-      "turno 2: 431324 P --> 100 puntos. TOTAL: 300\n",
-      "turno 3: 444224 P --> 1500 puntos. TOTAL: 1800\n",
-      "turno 4: 136234 P --> 100 puntos. TOTAL: 1900\n",
-      "turno 5: 121625 P --> 250 puntos. TOTAL: 2150\n",
-      "turno 6: 311253 P --> 250 puntos. TOTAL: 2400\n",
-      "turno 7: 665614 P --> 750 puntos. TOTAL: 3150\n",
-      "turno 8: 224145 P --> 150 puntos. TOTAL: 3300\n",
-      "turno 9: 146212 P --> 200 puntos. TOTAL: 3500\n",
-      "turno 10: 213122 P --> 400 puntos. TOTAL: 3900\n",
-      "turno 11: 313312 P --> 500 puntos. TOTAL: 4400\n",
-      "turno 12: 351222 P --> 350 puntos. TOTAL: 4750\n",
-      "turno 13: 544145 P --> 600 puntos. TOTAL: 5350\n",
-      "turno 14: 263342  --> 0 puntos. TOTAL: 5350\n",
-      "turno 15: 464451 P --> 550 puntos. TOTAL: 5900\n",
-      "turno 16: 314524 P --> 150 puntos. TOTAL: 6050\n",
-      "turno 17: 644322  --> 0 puntos. TOTAL: 6050\n",
-      "turno 18: 234233 P --> 300 puntos. TOTAL: 6350\n",
-      "turno 19: 123325 P --> 150 puntos. TOTAL: 6500\n",
-      "turno 20: 215633 P --> 150 puntos. TOTAL: 6650\n",
-      "turno 21: 241135 P --> 250 puntos. TOTAL: 6900\n",
-      "turno 22: 644256 P --> 50 puntos. TOTAL: 6950\n",
-      "turno 23: 532534 P --> 100 puntos. TOTAL: 7050\n",
-      "turno 24: 252233 P --> 250 puntos. TOTAL: 7300\n",
-      "turno 25: 161264 P --> 200 puntos. TOTAL: 7500\n",
-      "turno 26: 246644 P --> 400 puntos. TOTAL: 7900\n",
-      "turno 27: 414615 P --> 250 puntos. TOTAL: 8150\n",
-      "turno 28: 143314 P --> 1500 puntos. TOTAL: 9650\n",
-      "turno 29: 264343  --> 0 puntos. TOTAL: 9650\n",
-      "turno 30: 643546 P --> 50 puntos. TOTAL: 9700\n",
-      "turno 31: 222361 P --> 300 puntos. TOTAL: 10000\n",
-      "Deep Purple 100k 31 10000\n",
-      "turno 1: 135421 P --> 250 puntos. TOTAL: 250\n",
-      "turno 2: 141252 P --> 250 puntos. TOTAL: 500\n",
-      "turno 3: 132313 P --> 500 puntos. TOTAL: 1000\n",
-      "turno 4: 513536 P --> 200 puntos. TOTAL: 1200\n",
-      "turno 5: 622534 P --> 50 puntos. TOTAL: 1250\n",
-      "turno 6: 446145 P --> 550 puntos. TOTAL: 1800\n",
-      "turno 7: 633142 P --> 100 puntos. TOTAL: 1900\n",
-      "turno 8: 436523 P --> 50 puntos. TOTAL: 1950\n",
-      "turno 9: 631534 P --> 150 puntos. TOTAL: 2100\n",
-      "turno 10: 631156 P --> 250 puntos. TOTAL: 2350\n",
-      "turno 11: 323464  --> 0 puntos. TOTAL: 2350\n",
-      "turno 12: 626233 P --> 1500 puntos. TOTAL: 3850\n",
-      "turno 13: 166226 P --> 700 puntos. TOTAL: 4550\n",
-      "turno 14: 331326 P --> 400 puntos. TOTAL: 4950\n",
-      "turno 15: 245512 P --> 200 puntos. TOTAL: 5150\n",
-      "turno 16: 313423 P --> 400 puntos. TOTAL: 5550\n",
-      "turno 17: 414615 P --> 250 puntos. TOTAL: 5800\n",
-      "turno 18: 436151 P --> 250 puntos. TOTAL: 6050\n",
-      "turno 19: 615363 P --> 150 puntos. TOTAL: 6200\n",
-      "turno 20: 345166 P --> 150 puntos. TOTAL: 6350\n",
-      "turno 21: 131512 P --> 1050 puntos. TOTAL: 7400\n",
-      "turno 22: 136635 P --> 150 puntos. TOTAL: 7550\n",
-      "turno 23: 546314 P --> 150 puntos. TOTAL: 7700\n",
-      "turno 24: 646524 P --> 50 puntos. TOTAL: 7750\n",
-      "turno 25: 251345 P --> 200 puntos. TOTAL: 7950\n",
-      "turno 26: 163556 P --> 200 puntos. TOTAL: 8150\n",
-      "turno 27: 262355 P --> 100 puntos. TOTAL: 8250\n",
-      "turno 28: 244523 P --> 50 puntos. TOTAL: 8300\n",
-      "turno 29: 341213 P --> 200 puntos. TOTAL: 8500\n",
-      "turno 30: 145565 P --> 600 puntos. TOTAL: 9100\n",
-      "turno 31: 241663 P --> 100 puntos. TOTAL: 9200\n",
-      "turno 32: 625126 P --> 150 puntos. TOTAL: 9350\n",
-      "turno 33: 623261 P --> 100 puntos. TOTAL: 9450\n",
-      "turno 34: 112131 P --> 1100 puntos. TOTAL: 10550\n",
-      "Deep Purple 50k 34 10550\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from diezmil import JuegoDiezMil\n",
     "from jugador import JugadorAleatorio, JugadorSiempreSePlanta\n",
@@ -244,6 +112,34 @@
     "plt.suptitle(\"Resultados de 100 Juegos por Jugador\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1.])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def fool():\n",
+    "    return 0, 1, 2\n",
+    "\n",
+    "array = np.ones((10, 5, 8, 2))\n",
+    "\n",
+    "estado = fool() + (1,)\n",
+    "array[fool()]"
    ]
   },
   {
